# airloom

./: .gitignore  AGENTS.md  README.md  biome.json  package.json
apps/desktop/: electron-builder.yml  package.json  tsconfig.json  vite.config.ts
apps/vision-service/: pyproject.toml
apps/vision-service/app/: camera.py  capture_controller.py  capture_store.py  gestures.py  hand_tracking.py  latest_value.py  leap_config.py  leap_device.py  leap_tracking.py  live_pipeline.py  main.py  model_assets.py  pose_classifier.py  pose_features.py  pose_model.py  protocol.py  quest_bridge.py  quest_tracking.py  replay.py  smoothing.py
apps/vision-service/tests/: test_camera.py  test_capture_store.py  test_gestures.py  test_hand_tracking.py  test_leap_config.py  test_leap_device.py  test_leap_tracking.py  test_live_pipeline.py  test_main.py  test_pose_classifier.py  test_pose_features.py  test_pose_model.py  test_quest_bridge.py  test_quest_tracking.py  test_replay.py  test_smoothing.py  test_train_pose_classifier.py
apps/vision-service/tests/fixtures/landmark_sequences/: closed-fist-near-pinch.json  combo-click-right-enter.json  drag-release.json  enter-only.json  open-palm-enter.json
apps/vision-service/tools/: leap_smoke_test.py  quest_bridge_smoke_test.py  train_pose_classifier.py
apps/vision-service/web/quest-bridge/: client.js  index.html
docs/: architecture.md  gesture-spec.md  quest-bridge.md  verification.md
scripts/: dev.ts  pipeline-smoke.ts  report-html.ts  setup-leap.ts  test-report.ts  x11-smoke-target.py  x11-smoke.ts
scripts/lib/: junit.ts
(+32 files in other folders)
