[project]
name = "incantation-vision-service"
version = "0.1.0"
description = "Gesture inference and replay service for Incantation"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.20",
    "numpy>=2.2.0",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "ty>=0.0.1a17",
]
train = [
    "scikit-learn>=1.6.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
